Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116577

ASSERT: "sumFactors > 0.0" in qgridlayoutengine.cpp

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • None
    • 6.2.3, 6.5.2
    • Quick: Layouts
    • None
    • windows
    • Windows
    • 2a95ecf7e (dev), c8df6e18d (6.7), ea8aaf2bc (6.6), 79e6bc2fd (tqtc/lts-6.5), c45ebfbe8 (tqtc/lts-6.2), 4b4bca359 (dev), a4fd57854 (6.7), 461532b1a (tqtc/lts-6.5)

      While opening a project in QtDesignStudio it is loading qtcreator/share/qtcreator/qmldesigner/propertyEditorQmlSources/QtQuick/RectangleSpecifics.qml file

      Which opens
      qtcreator/share/qtcreator/qmldesigner/propertyEditorQmlSources/imports/HelperWidgets/ColorEditorPopup.qml
      and then uses GradientPresetList, which we guess produces that problem somehow deep inside Qt:

      ASSERT: "sumFactors > 0.0" in file qt6\qtbase\src\gui\util\qgridlayoutengine.cpp, line 212

      1   qt_message_fatal                                                                    qlogging.cpp                        2042 0x7ff8f7798e34 
      2   QMessageLogger::fatal                                                               qlogging.cpp                        935  0x7ff8f7796568 
      3   qt_assert                                                                           qassert.cpp                         67   0x7ff8f7786549 
      4   QGridLayoutRowData::calculateGeometries                                             qgridlayoutengine.cpp               213  0x7ff8f1a8658c 
      5   QGridLayoutEngine::ensureGeometries                                                 qgridlayoutengine.cpp               1616 0x7ff8f1a8de52 
      6   QGridLayoutEngine::setGeometries                                                    qgridlayoutengine.cpp               995  0x7ff8f1a8a0e7 
      7   QQuickGridLayoutBase::rearrange                                                     qquicklinearlayout.cpp              480  0x7ff8f6f53910 
      8   QQuickLayout::geometryChange                                                        qquicklayout.cpp                    929  0x7ff8f6f44ade 
      9   QQuickItem::setSize                                                                 qquickitem.cpp                      7558 0x7ff8eb0793a7 
      10  QQuickAnchorsPrivate::setItemSize                                                   qquickanchors.cpp                   400  0x7ff8eb00eb49 
      11  QQuickAnchorsPrivate::fillChanged                                                   qquickanchors.cpp                   178  0x7ff8eb010fcf 
      12  QQuickAnchorsPrivate::itemGeometryChanged                                           qquickanchors.cpp                   465  0x7ff8eb00eee3 
      13  <lambda_a2b1b025688d05673091f135a48d921d>::operator()                               qquickitem.cpp                      3825 0x7ff8eb09eeec 
      14  QQuickItemPrivate::notifyChangeListeners<<lambda_a2b1b025688d05673091f135a48d921d>> qquickitem_p.h                      347  0x7ff8eb0bda8a 
      15  QQuickItem::geometryChange                                                          qquickitem.cpp                      3829 0x7ff8eb08091c 
      16  QQuickItem::setWidth                                                                qquickitem.cpp                      7178 0x7ff8eb078661 
      17  QQuickItemPrivate::setWidth                                                         qquickitem_p.h                      578  0x7ff8eafc9ddf 
      19  QPropertyBindingPrivate::evaluateRecursive_inline                                   qproperty_p.h                       818  0x7ff8f774c735 
      20  QPropertyBindingPrivate::evaluateRecursive                                          qproperty.cpp                       289  0x7ff8f7974306 
      21  QQmlPropertyBindingJS::expressionChanged                                            qqmlpropertybinding.cpp             157  0x7ff8f49ed981 
      22  QQmlJavaScriptExpressionGuard_callback                                              qqmljavascriptexpression.cpp        549  0x7ff8f49227ad 
      23  QQmlNotifier::emitNotify                                                            qqmlnotifier.cpp                    71   0x7ff8f498e53a 
      24  QQmlData::signalEmitted                                                             qqmlengine.cpp                      359  0x7ff8f4870cf8 
      25  doActivate<0>                                                                       qobject.cpp                         3888 0x7ff8f795c5d0 
      26  QMetaObject::activate                                                               qobject.cpp                         4066 0x7ff8f7944d01 
      27  QQmlVMEMetaObject::activate                                                         qqmlvmemetaobject.cpp               1383 0x7ff8f4b340f6 
      28  QQmlVMEMetaObject::metaCall                                                         qqmlvmemetaobject.cpp               945  0x7ff8f4b30d81 
      29  QQmlPropertyData::doMetacall<2>                                                     qqmlpropertydata_p.h                321  0x7ff8f47d9029 
      30  QQmlPropertyData::writeProperty                                                     qqmlpropertydata_p.h                342  0x7ff8f47ebc32 
      31  GenericBinding<6>::doStore<double>                                                  qqmlbinding.cpp                     276  0x7ff8f47fd38c 
      32  GenericBinding<6>::write                                                            qqmlbinding.cpp                     248  0x7ff8f480b59f 
      33  QQmlBinding::doUpdate                                                               qqmlbinding.cpp                     700  0x7ff8f47f71e2 
      34  QQmlBinding::update                                                                 qqmlbinding.cpp                     166  0x7ff8f47f65d3 
      35  QQmlBinding::expressionChanged                                                      qqmlbinding.cpp                     604  0x7ff8f47f67bf 
      36  QQmlJavaScriptExpressionGuard_callback                                              qqmljavascriptexpression.cpp        549  0x7ff8f49227ad 
      37  QQmlNotifier::emitNotify                                                            qqmlnotifier.cpp                    71   0x7ff8f498e53a 
      38  QQmlData::signalEmitted                                                             qqmlengine.cpp                      359  0x7ff8f4870cf8 
      39  doActivate<0>                                                                       qobject.cpp                         3888 0x7ff8f795c5d0 
      40  QMetaObject::activate                                                               qobject.cpp                         4053 0x7ff8f7944c88 
      42  QQuickGridView::setCellWidth                                                        qquickgridview.cpp                  1648 0x7ff8eb7ea765 
      44  QQmlPropertyData::writeProperty                                                     qqmlpropertydata_p.h                339  0x7ff8f47ebc06 
      45  GenericBinding<6>::doStore<double>                                                  qqmlbinding.cpp                     276  0x7ff8f47fd38c 
      46  GenericBinding<6>::write                                                            qqmlbinding.cpp                     248  0x7ff8f480b59f 
      47  QQmlBinding::doUpdate                                                               qqmlbinding.cpp                     700  0x7ff8f47f71e2 
      48  QQmlBinding::update                                                                 qqmlbinding.cpp                     166  0x7ff8f47f65d3 
      49  QQmlBinding::expressionChanged                                                      qqmlbinding.cpp                     604  0x7ff8f47f67bf 
      50  QQmlJavaScriptExpressionGuard_callback                                              qqmljavascriptexpression.cpp        549  0x7ff8f49227ad 
      51  QQmlNotifier::emitNotify                                                            qqmlnotifier.cpp                    71   0x7ff8f498e53a 
      52  QQmlData::signalEmitted                                                             qqmlengine.cpp                      359  0x7ff8f4870cf8 
      53  doActivate<0>                                                                       qobject.cpp                         3888 0x7ff8f795c5d0 
      54  QMetaObject::activate                                                               qobject.cpp                         4066 0x7ff8f7944d01 
      55  QQmlVMEMetaObject::activate                                                         qqmlvmemetaobject.cpp               1383 0x7ff8f4b340f6 
      56  QQmlVMEMetaObject::metaCall                                                         qqmlvmemetaobject.cpp               945  0x7ff8f4b30d81 
      57  QQmlPropertyData::doMetacall<2>                                                     qqmlpropertydata_p.h                321  0x7ff8f47d9029 
      58  QQmlPropertyData::writeProperty                                                     qqmlpropertydata_p.h                342  0x7ff8f47ebc32 
      59  GenericBinding<2>::doStore<int>                                                     qqmlbinding.cpp                     276  0x7ff8f47fcdda 
      60  GenericBinding<2>::write                                                            qqmlbinding.cpp                     243  0x7ff8f480aba8 
      61  QQmlBinding::doUpdate                                                               qqmlbinding.cpp                     700  0x7ff8f47f71e2 
      62  QQmlBinding::update                                                                 qqmlbinding.cpp                     166  0x7ff8f47f65d3 
      63  QQmlBinding::expressionChanged                                                      qqmlbinding.cpp                     604  0x7ff8f47f67bf 
      64  QPropertyChangeTrigger::trigger                                                     qqmljavascriptexpression.cpp        514  0x7ff8f49210b1 
      68  QQuickItem::geometryChange                                                          qquickitem.cpp                      3835 0x7ff8eb080988 
      69  QQuickFlickable::geometryChange                                                     qquickflickable.cpp                 1999 0x7ff8eb035d7a 
      70  QQuickItemView::geometryChange                                                      qquickitemview.cpp                  1352 0x7ff8eb80cbc7 
      71  QQuickGridView::geometryChange                                                      qquickgridview.cpp                  2168 0x7ff8eb7ec26a 
      72  QQuickItem::setSize                                                                 qquickitem.cpp                      7558 0x7ff8eb0793a7 
      73  QQuickAnchorsPrivate::setItemSize                                                   qquickanchors.cpp                   400  0x7ff8eb00eb49 
      74  QQuickAnchorsPrivate::fillChanged                                                   qquickanchors.cpp                   178  0x7ff8eb010fcf 
      75  QQuickAnchorsPrivate::itemGeometryChanged                                           qquickanchors.cpp                   465  0x7ff8eb00eee3 
      76  <lambda_a2b1b025688d05673091f135a48d921d>::operator()                               qquickitem.cpp                      3825 0x7ff8eb09eeec 
      77  QQuickItemPrivate::notifyChangeListeners<<lambda_a2b1b025688d05673091f135a48d921d>> qquickitem_p.h                      347  0x7ff8eb0bda8a 
      78  QQuickItem::geometryChange                                                          qquickitem.cpp                      3829 0x7ff8eb08091c 
      79  QQuickItem::setSize                                                                 qquickitem.cpp                      7558 0x7ff8eb0793a7 
      80  QQuickStackLayout::rearrange                                                        qquickstacklayout.cpp               359  0x7ff8f6f5d61a 
      81  QQuickLayout::geometryChange                                                        qquicklayout.cpp                    929  0x7ff8f6f44ade 
      82  QQuickItem::setSize                                                                 qquickitem.cpp                      7558 0x7ff8eb0793a7 
      83  QQuickGridLayoutItem::setGeometry                                                   qquickgridlayoutengine_p.h          87   0x7ff8f6f5b3db 
      84  QGridLayoutEngine::setGeometries                                                    qgridlayoutengine.cpp               1023 0x7ff8f1a8a4f4 
      85  QQuickGridLayoutBase::rearrange                                                     qquicklinearlayout.cpp              480  0x7ff8f6f53910 
      86  QQuickGridLayoutBase::componentComplete                                             qquicklinearlayout.cpp              323  0x7ff8f6f52341 
      87  QQmlObjectCreator::finalize                                                         qqmlobjectcreator.cpp               1487 0x7ff8f499160c 
      88  QQmlIncubatorPrivate::incubate                                                      qqmlincubator.cpp                   346  0x7ff8f491a50a 
      89  QQmlEnginePrivate::incubate                                                         qqmlincubator.cpp                   55   0x7ff8f49191c5 
      90  QQmlComponent::create                                                               qqmlcomponent.cpp                   1422 0x7ff8f4832d88 
      91  QQuickLoaderPrivate::_q_sourceLoaded                                                qquickloader.cpp                    743  0x7ff8eb11fe8e 
      92  QQuickLoaderPrivate::load                                                           qquickloader.cpp                    605  0x7ff8eb11ec63 
      93  QQuickLoader::componentComplete                                                     qquickloader.cpp                    803  0x7ff8eb11d547 
      94  QQmlObjectCreator::finalize                                                         qqmlobjectcreator.cpp               1487 0x7ff8f499160c 
      95  QQmlIncubatorPrivate::incubate                                                      qqmlincubator.cpp                   346  0x7ff8f491a50a 
      96  QQmlEnginePrivate::incubate                                                         qqmlincubator.cpp                   55   0x7ff8f49191c5 
      97  QQmlComponent::create                                                               qqmlcomponent.cpp                   1422 0x7ff8f4832d88 
      98  QQuickLoaderPrivate::_q_sourceLoaded                                                qquickloader.cpp                    743  0x7ff8eb11fe8e 
      99  QQuickLoaderPrivate::load                                                           qquickloader.cpp                    605  0x7ff8eb11ec63 
      100 QQuickLoader::loadFromSource                                                        qquickloader.cpp                    410  0x7ff8eb11d9eb 
      101 QQuickLoader::setSource                                                             qquickloader.cpp                    389  0x7ff8eb11d932 
      102 QQuickLoader::setSourceWithoutResolve                                               qquickloader.cpp                    374  0x7ff8eb11cdf1 
      104 QQmlPropertyData::writeProperty                                                     qqmlpropertydata_p.h                339  0x7ff8f47ebc06 
      105 QQmlPropertyPrivate::write                                                          qqmlproperty.cpp                    1543 0x7ff8f49e2485 
      106 QQmlPropertyPrivate::writeValueProperty                                             qqmlproperty.cpp                    1306 0x7ff8f49e1796 
      107 QQmlBinding::slowWrite                                                              qqmlbinding.cpp                     540  0x7ff8f47f80b8 
      108 GenericBinding<0>::write                                                            qqmlbinding.cpp                     269  0x7ff8f480cacd 
      109 QQmlBinding::doUpdate                                                               qqmlbinding.cpp                     700  0x7ff8f47f71e2 
      110 QQmlBinding::update                                                                 qqmlbinding.cpp                     166  0x7ff8f47f65d3 
      111 QQmlBinding::expressionChanged                                                      qqmlbinding.cpp                     604  0x7ff8f47f67bf 
      112 QQmlJavaScriptExpressionGuard_callback                                              qqmljavascriptexpression.cpp        549  0x7ff8f49227ad 
      113 QQmlNotifier::emitNotify                                                            qqmlnotifier.cpp                    71   0x7ff8f498e53a 
      114 QQmlData::signalEmitted                                                             qqmlengine.cpp                      359  0x7ff8f4870cf8 
      115 doActivate<0>                                                                       qobject.cpp                         3888 0x7ff8f795c5d0 
      116 QMetaObject::activate                                                               qobject.cpp                         4053 0x7ff8f7944c88 
      117 QmlDesigner::PropertyEditorContextObject::specificsUrlChanged                       moc_propertyeditorcontextobject.cpp 1007 0x7ff8e563b862 
      
      

      My guess is that

      qreal desired = box.q_preferredSize - box.q_minimumSize;
      

      is already broken see the debugger screenshot:

        1. main.qml
          0.4 kB
        2. screenshot-1.png
          screenshot-1.png
          377 kB
        For Gerrit Dashboard: QTBUG-116577
        # Subject Branch Project Status CR V

            smd Jan Arve
            tjenssen Tim Jenssen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: